--- a/shop/index.html
+++ b/shop/index.html
@@ -8,7 +8,7 @@
     <meta name="robots" content="noindex,nofollow" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <base href="../shop/" />
+    <base href="./" />
 
     <script src="./jquery-1.js"></script>
     <script>
@@ -37,13 +37,13 @@
           <div class="col-12 col-md-4 col-lg-3 outer-nav first-outer-nav">
             <ul>
               <li>
-                <a href="./404">Account</a>
+                <a href="404/">Account</a>
               </li>
               <li>
-                <a href="./404">Wishlist</a>
+                <a href="404/">Wishlist</a>
               </li>
               <li>
-                <a href="./404">Log In</a>
+                <a href="404/">Log In</a>
               </li>
               <li class="mobile-bag">
                 <a href="./cart"
@@ -86,140 +86,140 @@
       <div class="main-nav" id="mainnav">
         <ul class="in">
           <li>
-            <a href="./products"
+            <a href="products/"
               >Dresses <i class="fa fa-angle-down" aria-hidden="true"></i>
             </a>
             <ul class="hidden">
               <li>
-                <a href="./products">Floral</a>
+                <a href="products/">Floral</a>
               </li>
               <li>
-                <a href="./products">Midi</a>
+                <a href="products/">Midi</a>
               </li>
               <li>
-                <a href="./products">Maxi</a>
+                <a href="products/">Maxi</a>
               </li>
               <li>
-                <a href="./products">Bodycon</a>
+                <a href="products/">Bodycon</a>
               </li>
               <li>
-                <a href="./products">Formal</a>
+                <a href="products/">Formal</a>
               </li>
             </ul>
           </li>
           <li>
-            <a href="./products"
+            <a href="products/"
               >Tops <i class="fa fa-angle-down" aria-hidden="true"></i>
             </a>
             <ul class="hidden">
               <li>
-                <a href="./products">Blouses</a>
+                <a href="products/">Blouses</a>
               </li>
               <li>
-                <a href="./products">Tees</a>
+                <a href="products/">Tees</a>
               </li>
               <li>
-                <a href="./products">Tanks</a>
+                <a href="products/">Tanks</a>
               </li>
               <li>
-                <a href="./products">Sweaters</a>
+                <a href="products/">Sweaters</a>
               </li>
               <li>
-                <a href="./products">Hoodies</a>
+                <a href="products/">Hoodies</a>
               </li>
             </ul>
           </li>
           <li>
-            <a href="./404"
+            <a href="404/"
               >Bottoms <i class="fa fa-angle-down" aria-hidden="true"></i>
             </a>
             <ul class="hidden">
               <li>
-                <a href="./products">Jeans</a>
+                <a href="products/">Jeans</a>
               </li>
               <li>
-                <a href="./products">Trousers</a>
+                <a href="products/">Trousers</a>
               </li>
               <li>
-                <a href="./products">Skirts</a>
+                <a href="products/">Skirts</a>
               </li>
               <li>
-                <a href="./products">Shorts</a>
+                <a href="products/">Shorts</a>
               </li>
               <li>
-                <a href="./products">Leggings</a>
+                <a href="products/">Leggings</a>
               </li>
             </ul>
           </li>
           <li>
-            <a href="./products"
+            <a href="products/"
               >Outerwear <i class="fa fa-angle-down" aria-hidden="true"></i>
             </a>
             <ul class="hidden">
               <li>
-                <a href="./products">Jackets</a>
+                <a href="products/">Jackets</a>
               </li>
               <li>
-                <a href="./products">Parkas</a>
+                <a href="products/">Parkas</a>
               </li>
               <li>
-                <a href="./products">Trenches</a>
+                <a href="products/">Trenches</a>
               </li>
               <li>
-                <a href="./products">Denim</a>
+                <a href="products/">Denim</a>
               </li>
               <li>
-                <a href="./products">Blazers</a>
+                <a href="products/">Blazers</a>
               </li>
             </ul>
           </li>
           <li>
-            <a href="./products"
+            <a href="products/"
               >Accessories <i class="fa fa-angle-down" aria-hidden="true"></i>
             </a>
             <ul class="hidden">
               <li>
-                <a href="./products">Scarves</a>
+                <a href="products/">Scarves</a>
               </li>
               <li>
-                <a href="./products">Sunglasses</a>
+                <a href="products/">Sunglasses</a>
               </li>
               <li>
-                <a href="./products">Hats</a>
+                <a href="products/">Hats</a>
               </li>
               <li>
-                <a href="./products">Bags &amp; Wallets</a>
+                <a href="products/">Bags &amp; Wallets</a>
               </li>
               <li>
-                <a href="./products">Shoes</a>
+                <a href="products/">Shoes</a>
               </li>
               <li>
-                <a href="./products">Belts</a>
+                <a href="products/">Belts</a>
               </li>
             </ul>
           </li>
           <li>
-            <a href="./products"
+            <a href="products/"
               >Sale <i class="fa fa-angle-down" aria-hidden="true"></i>
             </a>
             <ul class="hidden">
               <li>
-                <a href="./products">Dresses</a>
+                <a href="products/">Dresses</a>
               </li>
               <li>
-                <a href="./products">Tops</a>
+                <a href="products/">Tops</a>
               </li>
               <li>
-                <a href="./products">Bottoms</a>
+                <a href="products/">Bottoms</a>
               </li>
               <li>
-                <a href="./products">Outerwear</a>
+                <a href="products/">Outerwear</a>
               </li>
               <li>
-                <a href="./products">Accessories</a>
+                <a href="products/">Accessories</a>
               </li>
               <li>
-                <a href="./products">Under $10</a>
+                <a href="products/">Under $10</a>
               </li>
             </ul>
           </li>
@@ -253,7 +253,7 @@
             off.
             <a
               class="shop-now-button"
-              href="./products"
+              href="products/"
               style="color:#FFFFFF;text-decoration:none;"
               >Shop Now</a
             >
@@ -265,7 +265,7 @@
         <h1>Featured Tops</h1>
         <div class="row">
           <div class="card col-6 col-md-3 col-lg-3">
-            <a href="./item" style="color:default;text-decoration:none;">
+            <a href="item/" style="color:default;text-decoration:none;">
               <img
                 class="card-img-top"
                 src="./top_0000.jpg"
@@ -279,7 +279,7 @@
           </div>
 
           <div class="card col-6 col-md-3 col-lg-3">
-            <a href="./item2" style="color:default;text-decoration:none;">
+            <a href="item2/" style="color:default;text-decoration:none;">
               <img
                 class="card-img-top"
                 src="./top_0001.jpg"
@@ -292,7 +292,7 @@
             >
           </div>
           <div class="card col-6 col-md-3 col-lg-3">
-            <a href="./item3" style="color:default;text-decoration:none;">
+            <a href="item3/" style="color:default;text-decoration:none;">
               <img
                 class="card-img-top"
                 src="./top_0008.jpg"
@@ -306,7 +306,7 @@
           </div>
 
           <div class="card col-6 col-md-3 col-lg-3">
-            <a href="./item" style="color:default;text-decoration:none;">
+            <a href="item/" style="color:default;text-decoration:none;">
               <img
                 class="card-img-top"
                 src="./top_0005.jpg"
@@ -320,7 +320,7 @@
           </div>
 
           <div class="card col-6 col-md-3 col-lg-3">
-            <a href="./item" style="color:default;text-decoration:none;">
+            <a href="item/" style="color:default;text-decoration:none;">
               <img
                 class="card-img-top"
                 src="./top_0003.jpg"
@@ -336,7 +336,7 @@
           </div>
 
           <div class="card col-6 col-md-3 col-lg-3">
-            <a href="./item" style="color:default;text-decoration:none;">
+            <a href="item/" style="color:default;text-decoration:none;">
               <img
                 class="card-img-top"
                 src="./top_0002.jpg"
@@ -350,7 +350,7 @@
           </div>
 
           <div class="card col-6 col-md-3 col-lg-3">
-            <a href="./item" style="color:default;text-decoration:none;">
+            <a href="item/" style="color:default;text-decoration:none;">
               <img
                 class="card-img-top"
                 src="./top_0004.jpg"
@@ -375,9 +375,9 @@
             <h1>Company</h1>
             <ul>
               <a href="./contact"><li>About Us</li></a>
-              <a href="./404"><li>Careers</li></a>
-              <a href="./404"><li>Affiliates</li></a>
-              <a href="./404"><li>Press</li></a>
+              <a href="404/"><li>Careers</li></a>
+              <a href="404/"><li>Affiliates</li></a>
+              <a href="404/"><li>Press</li></a>
               <a href="./locations"><li>Store Finder</li></a>
               <a href="./contact"><li>Contact Us</li></a>
             </ul>
@@ -386,24 +386,24 @@
           <div class="col-6 col-md-3 col-lg-3">
             <h1>Account</h1>
             <ul>
-              <a href="./404"><li>My Account</li></a>
+              <a href="404/"><li>My Account</li></a>
               <a href="./cart"><li>Cart</li></a>
-              <a href="./404"><li>Wishlist</li></a>
-              <a href="./404"><li>Order Status</li></a>
-              <a href="./404"><li>Order History</li></a>
+              <a href="404/"><li>Wishlist</li></a>
+              <a href="404/"><li>Order Status</li></a>
+              <a href="404/"><li>Order History</li></a>
             </ul>
           </div>
 
           <div class="col-6 col-md-3 col-lg-3">
             <h1>Customer Service</h1>
             <ul>
-              <a href="./404"><li>Shipping Information</li></a>
-              <a href="./404"><li>Payment Options</li></a>
-              <a href="./404"><li>Returns/Exchanges</li></a>
-              <a href="./404"><li>Size Guide</li></a>
-              <a href="./404"><li>Privacy Policy</li></a>
-              <a href="./404"><li>Terms of Use</li></a>
-              <a href="./404"><li>FAQ</li></a>
+              <a href="404/"><li>Shipping Information</li></a>
+              <a href="404/"><li>Payment Options</li></a>
+              <a href="404/"><li>Returns/Exchanges</li></a>
+              <a href="404/"><li>Size Guide</li></a>
+              <a href="404/"><li>Privacy Policy</li></a>
+              <a href="404/"><li>Terms of Use</li></a>
+              <a href="404/"><li>FAQ</li></a>
             </ul>
           </div>
 
