--- a/shop/item3/index.html
+++ b/shop/item3/index.html
@@ -16,7 +16,7 @@
       rel="stylesheet"
     />
 
-    <link rel="canonical" href="./item3" />
+    <link rel="canonical" href="item3/" />
 
     <meta name="viewport" content="width=device-width,initial-scale=1" />
 
@@ -43,11 +43,11 @@
         <div class="row">
           <div class="col-12 col-md-4 col-lg-3 outer-nav first-outer-nav">
             <ul>
-              <li><a href="404">Account</a></li>
-              <li><a href="404">Wishlist</a></li>
-              <li><a href="404">Log In</a></li>
+              <li><a href="404/">Account</a></li>
+              <li><a href="404/">Wishlist</a></li>
+              <li><a href="404/">Log In</a></li>
               <li class="mobile-bag">
-                <a href="cart"
+                <a href="cart/"
                   ><i
                     class="fa fa-shopping-bag"
                     aria-hidden="true"
@@ -68,7 +68,7 @@
           <div class="col-2 col-md-3 col-lg-3 outer-nav second-outer-nav">
             <ul>
               <li>
-                <a href="cart"
+                <a href="cart/"
                   ><i
                     class="fa fa-shopping-bag"
                     aria-hidden="true"
@@ -87,77 +87,77 @@
       <div class="main-nav" id="mainnav">
         <ul class="in">
           <li>
-            <a href="products"
+            <a href="products/"
               >Dresses <i class="fa fa-angle-down" aria-hidden="true"></i>
             </a>
             <ul class="hidden">
-              <li><a href="products">Floral</a></li>
-              <li><a href="products">Midi</a></li>
-              <li><a href="products">Maxi</a></li>
-              <li><a href="products">Bodycon</a></li>
-              <li><a href="products">Formal</a></li>
+              <li><a href="products/">Floral</a></li>
+              <li><a href="products/">Midi</a></li>
+              <li><a href="products/">Maxi</a></li>
+              <li><a href="products/">Bodycon</a></li>
+              <li><a href="products/">Formal</a></li>
             </ul>
           </li>
           <li>
-            <a href="products"
+            <a href="products/"
               >Tops <i class="fa fa-angle-down" aria-hidden="true"></i>
             </a>
             <ul class="hidden">
-              <li><a href="products">Blouses</a></li>
-              <li><a href="products">Tees</a></li>
-              <li><a href="products">Tanks</a></li>
-              <li><a href="products">Sweaters</a></li>
-              <li><a href="products">Hoodies</a></li>
+              <li><a href="products/">Blouses</a></li>
+              <li><a href="products/">Tees</a></li>
+              <li><a href="products/">Tanks</a></li>
+              <li><a href="products/">Sweaters</a></li>
+              <li><a href="products/">Hoodies</a></li>
             </ul>
           </li>
           <li>
-            <a href="404"
+            <a href="404/"
               >Bottoms <i class="fa fa-angle-down" aria-hidden="true"></i>
             </a>
             <ul class="hidden">
-              <li><a href="products">Jeans</a></li>
-              <li><a href="products">Trousers</a></li>
-              <li><a href="products">Skirts</a></li>
-              <li><a href="products">Shorts</a></li>
-              <li><a href="products">Leggings</a></li>
+              <li><a href="products/">Jeans</a></li>
+              <li><a href="products/">Trousers</a></li>
+              <li><a href="products/">Skirts</a></li>
+              <li><a href="products/">Shorts</a></li>
+              <li><a href="products/">Leggings</a></li>
             </ul>
           </li>
           <li>
-            <a href="products"
+            <a href="products/"
               >Outerwear <i class="fa fa-angle-down" aria-hidden="true"></i>
             </a>
             <ul class="hidden">
-              <li><a href="products">Jackets</a></li>
-              <li><a href="products">Parkas</a></li>
-              <li><a href="products">Trenches</a></li>
-              <li><a href="products">Denim</a></li>
-              <li><a href="products">Blazers</a></li>
+              <li><a href="products/">Jackets</a></li>
+              <li><a href="products/">Parkas</a></li>
+              <li><a href="products/">Trenches</a></li>
+              <li><a href="products/">Denim</a></li>
+              <li><a href="products/">Blazers</a></li>
             </ul>
           </li>
           <li>
-            <a href="products"
+            <a href="products/"
               >Accessories <i class="fa fa-angle-down" aria-hidden="true"></i>
             </a>
             <ul class="hidden">
-              <li><a href="products">Scarves</a></li>
-              <li><a href="products">Sunglasses</a></li>
-              <li><a href="products">Hats</a></li>
-              <li><a href="products">Bags &amp; Wallets</a></li>
-              <li><a href="products">Shoes</a></li>
-              <li><a href="products">Belts</a></li>
+              <li><a href="products/">Scarves</a></li>
+              <li><a href="products/">Sunglasses</a></li>
+              <li><a href="products/">Hats</a></li>
+              <li><a href="products/">Bags &amp; Wallets</a></li>
+              <li><a href="products/">Shoes</a></li>
+              <li><a href="products/">Belts</a></li>
             </ul>
           </li>
           <li>
-            <a href="products"
+            <a href="products/"
               >Sale <i class="fa fa-angle-down" aria-hidden="true"></i>
             </a>
             <ul class="hidden">
-              <li><a href="products">Dresses</a></li>
-              <li><a href="products">Tops</a></li>
-              <li><a href="products">Bottoms</a></li>
-              <li><a href="products">Outerwear</a></li>
-              <li><a href="products">Accessories</a></li>
-              <li><a href="products">Under $10</a></li>
+              <li><a href="products/">Dresses</a></li>
+              <li><a href="products/">Tops</a></li>
+              <li><a href="products/">Bottoms</a></li>
+              <li><a href="products/">Outerwear</a></li>
+              <li><a href="products/">Accessories</a></li>
+              <li><a href="products/">Under $10</a></li>
             </ul>
           </li>
 
@@ -215,7 +215,7 @@
               <div class="">L</div>
             </div>
 
-            <a href="cart" class="add-to-cart-valid">Add to Cart</a>
+            <a href="cart/" class="add-to-cart-valid">Add to Cart</a>
           </div>
         </div>
       </div></span
@@ -228,9 +228,9 @@
             <h1>Company</h1>
             <ul>
               <a href="contact"><li>About Us</li></a>
-              <a href="404"><li>Careers</li></a>
-              <a href="404"><li>Affiliates</li></a>
-              <a href="404"><li>Press</li></a>
+              <a href="404/"><li>Careers</li></a>
+              <a href="404/"><li>Affiliates</li></a>
+              <a href="404/"><li>Press</li></a>
               <a href="locations"><li>Store Finder</li></a>
               <a href="contact"><li>Contact Us</li></a>
             </ul>
@@ -239,24 +239,24 @@
           <div class="col-6 col-md-3 col-lg-3">
             <h1>Account</h1>
             <ul>
-              <a href="404"><li>My Account</li></a>
-              <a href="cart"><li>Cart</li></a>
-              <a href="404"><li>Wishlist</li></a>
-              <a href="404"><li>Order Status</li></a>
-              <a href="404"><li>Order History</li></a>
+              <a href="404/"><li>My Account</li></a>
+              <a href="cart/"><li>Cart</li></a>
+              <a href="404/"><li>Wishlist</li></a>
+              <a href="404/"><li>Order Status</li></a>
+              <a href="404/"><li>Order History</li></a>
             </ul>
           </div>
 
           <div class="col-6 col-md-3 col-lg-3">
             <h1>Customer Service</h1>
             <ul>
-              <a href="404"><li>Shipping Information</li></a>
-              <a href="404"><li>Payment Options</li></a>
-              <a href="404"><li>Returns/Exchanges</li></a>
-              <a href="404"><li>Size Guide</li></a>
-              <a href="404"><li>Privacy Policy</li></a>
-              <a href="404"><li>Terms of Use</li></a>
-              <a href="404"><li>FAQ</li></a>
+              <a href="404/"><li>Shipping Information</li></a>
+              <a href="404/"><li>Payment Options</li></a>
+              <a href="404/"><li>Returns/Exchanges</li></a>
+              <a href="404/"><li>Size Guide</li></a>
+              <a href="404/"><li>Privacy Policy</li></a>
+              <a href="404/"><li>Terms of Use</li></a>
+              <a href="404/"><li>FAQ</li></a>
             </ul>
           </div>
 
