--- a/web/shop/404/index.html
+++ b/web/shop/404/index.html
@@ -1,34 +1,36 @@
-<!DOCTYPE html
-><!-- start coded_template: id:5379509346 path:Custom/page/demo_site_templates/retail_template.html -->
-<html lang="en">
+<!DOCTYPE html>
+<!-- start coded_template: id:5379509346 path:Custom/page/demo_site_templates/retail_template.html -->
+<html class="fa-events-icons-ready" lang="en">
   <head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <meta charset="UTF-8" />
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="content-language" content="en-us" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
     <meta name="robots" content="noindex,nofollow" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="" />
 
     <base href="../" />
 
-    <script src="jquery-1.js"></script>
-    <script>
-      hsjQuery = window["jQuery"];
-    </script>
-    <link href="public_common.css" rel="stylesheet" />
-    <link rel="canonical" href="" />
-
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="proximanova.css" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <meta http-equiv="content-language" content="en-us" />
-
     <title>Berkshire &amp; Nash</title>
-    <script src="daf69945af.js"></script>
-    <link href="daf69945af.css" media="all" rel="stylesheet" />
-    <link rel="stylesheet" href="bootstrap.css" crossorigin="anonymous" />
-    <link href="css.css" rel="stylesheet" />
-    <link href="index.css" rel="stylesheet" />
+
+    <link rel="stylesheet" type="text/css" href="GoogleLato.css" />
+
+    <link rel="stylesheet" type="text/css" href="daf69945af.css" />
+    <script type="text/javascript" src="daf69945af.js"></script>
+
+    <script type="text/javascript" src="jquery-slim.js"></script>
+    <script type="text/javascript" src="popper.min.js"></script>
+
+    <link rel="stylesheet" type="text/css" href="bootstrap.min.css" />
+    <script type="text/javascript" src="bootstrap.min.js"></script>
+
+    <script type="text/javascript" src="Foresee_Dec2016-main.js"></script>
+    <script type="text/javascript" src="ScrollMagic.js"></script>
+    <script type="text/javascript" src="velocity.js"></script>
+
+    <link rel="stylesheet" type="text/css" href="index.css" />
+    <script type="text/javascript" src="index.js"></script>
   </head>
 
   <body>
@@ -54,7 +56,7 @@
           </div>
 
           <div class="col-12 col-md-5 col-lg-6 logo">
-            <a href="../" style="text-decoration:none;color:#000000;"
+            <a href="./" style="text-decoration:none;color:#000000;"
               >Berkshire &amp; Nash</a
             >
           </div>
@@ -157,7 +159,7 @@
 
           <a class="grow-2"></a>
           <a class="search"
-            ><input type="text" value="Search"/><button>
+            ><input type="text" placeholder="Search"/><button>
               <i class="fa fa-search" aria-hidden="true"></i></button
           ></a>
           <a href="javascript:void(0);" class="icon" onclick="myFunction()"
@@ -250,31 +252,7 @@
       <div class="container">
         © 2017 for demonstration purposes only. Berkshire &amp; Nash is not a
         real retailer, and orders will not be fulfilled.
-
-        <script
-          type="text/javascript"
-          src="/hs/hsstatic/content_shared_assets/static-1.4091/js/public_common.js"
-        ></script>
       </div>
     </div>
-
-    <script
-      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
-      integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"
-      integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
-      crossorigin="anonymous"
-    ></script
-    ><script src="index.js"></script>
-
-    <!-- end coded_template: id:5379509346 path:Custom/page/demo_site_templates/retail_template.html -->
   </body>
 </html>
