--- a/web/shop/item/index.html
+++ b/web/shop/item/index.html
@@ -1,42 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<!-- start coded_template: id:5379509346 path:Custom/page/demo_site_templates/retail_template.html -->
+<html class="fa-events-icons-ready" lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta NAME="robots" CONTENT="noindex,nofollow" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="" />
-
-    <base href="../../shop/" />
-
-    <script src="/hs/hsstatic/jquery-libs/static-1.1/jquery/jquery-1.7.1.js"></script>
-    <script>
-      hsjQuery = window["jQuery"];
-    </script>
-    <link
-      href="/hs/hsstatic/content_shared_assets/static-1.4091/css/public_common.css"
-      rel="stylesheet"
-    />
-
-    <link rel="canonical" href="item/" />
-
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <meta http-equiv="content-language" content="en-us" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
+    <meta name="robots" content="noindex,nofollow" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <base href="../" />
 
     <title>Berkshire &amp; Nash</title>
 
-    <script src="https://use.fontawesome.com/daf69945af.js"></script>
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Lato:300,400,400i,700,900|Playfair+Display:400,400i,700,700i,900,900i"
-      rel="stylesheet"
-    />
-    <link href="./index.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="GoogleLato.css" />
+
+    <link rel="stylesheet" type="text/css" href="daf69945af.css" />
+    <script type="text/javascript" src="daf69945af.js"></script>
+
+    <script type="text/javascript" src="jquery-slim.js"></script>
+    <script type="text/javascript" src="popper.min.js"></script>
+
+    <link rel="stylesheet" type="text/css" href="bootstrap.min.css" />
+    <script type="text/javascript" src="bootstrap.min.js"></script>
+
+    <script type="text/javascript" src="Foresee_Dec2016-main.js"></script>
+    <script type="text/javascript" src="ScrollMagic.js"></script>
+    <script type="text/javascript" src="velocity.js"></script>
+
+    <link rel="stylesheet" type="text/css" href="index.css" />
+    <script type="text/javascript" src="index.js"></script>
   </head>
 
   <body>
@@ -165,7 +159,7 @@
 
           <a class="grow-2"></a>
           <a class="search"
-            ><input type="text" value="Search"/><button>
+            ><input type="text" placeholder="Search"/><button>
               <i class="fa fa-search" aria-hidden="true"></i></button
           ></a>
           <a href="javascript:void(0);" class="icon" onclick="myFunction()"
@@ -275,22 +269,5 @@
         real retailer, and orders will not be fulfilled.
       </div>
     </div>
-
-    <script
-      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
-      integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"
-      integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
-      crossorigin="anonymous"
-    ></script
-    ><script src="index.js"></script>
   </body>
 </html>
