--- a/web/shop/products/index.html
+++ b/web/shop/products/index.html
@@ -2,33 +2,35 @@
 <!-- start coded_template: id:5379509346 path:Custom/page/demo_site_templates/retail_template.html -->
 <html class="fa-events-icons-ready" lang="en">
   <head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <meta charset="UTF-8" />
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="content-language" content="en-us" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
     <meta name="robots" content="noindex,nofollow" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="" />
 
     <base href="../" />
 
-    <script src="./jquery-1.js"></script>
-    <script>
-      hsjQuery = window["jQuery"];
-    </script>
-    <link href="public_common.css" rel="stylesheet" />
-    <link rel="canonical" href="" />
-
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="proximanova.css" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <meta http-equiv="content-language" content="en-us" />
-
     <title>Berkshire &amp; Nash</title>
-    <script src="daf69945af.js"></script>
-    <link href="daf69945af.css" media="all" rel="stylesheet" />
-    <link rel="stylesheet" href="bootstrap.css" crossorigin="anonymous" />
-    <link href="css.css" rel="stylesheet" />
-    <link href="index.css" rel="stylesheet" />
+
+    <link rel="stylesheet" type="text/css" href="GoogleLato.css" />
+
+    <link rel="stylesheet" type="text/css" href="daf69945af.css" />
+    <script type="text/javascript" src="daf69945af.js"></script>
+
+    <script type="text/javascript" src="jquery-slim.js"></script>
+    <script type="text/javascript" src="popper.min.js"></script>
+
+    <link rel="stylesheet" type="text/css" href="bootstrap.min.css" />
+    <script type="text/javascript" src="bootstrap.min.js"></script>
+
+    <script type="text/javascript" src="Foresee_Dec2016-main.js"></script>
+    <script type="text/javascript" src="ScrollMagic.js"></script>
+    <script type="text/javascript" src="velocity.js"></script>
+
+    <link rel="stylesheet" type="text/css" href="index.css" />
+    <script type="text/javascript" src="index.js"></script>
   </head>
 
   <body>
@@ -91,21 +93,11 @@
               >Dresses <i class="fa fa-angle-down" aria-hidden="true"></i>
             </a>
             <ul class="hidden">
-              <li>
-                <a href="products/">Floral</a>
-              </li>
-              <li>
-                <a href="products/">Midi</a>
-              </li>
-              <li>
-                <a href="products/">Maxi</a>
-              </li>
-              <li>
-                <a href="products/">Bodycon</a>
-              </li>
-              <li>
-                <a href="products/">Formal</a>
-              </li>
+              <li><a href="products/">Floral</a></li>
+              <li><a href="products/">Midi</a></li>
+              <li><a href="products/">Maxi</a></li>
+              <li><a href="products/">Bodycon</a></li>
+              <li><a href="products/">Formal</a></li>
             </ul>
           </li>
           <li>
@@ -113,21 +105,11 @@
               >Tops <i class="fa fa-angle-down" aria-hidden="true"></i>
             </a>
             <ul class="hidden">
-              <li>
-                <a href="products/">Blouses</a>
-              </li>
-              <li>
-                <a href="products/">Tees</a>
-              </li>
-              <li>
-                <a href="products/">Tanks</a>
-              </li>
-              <li>
-                <a href="products/">Sweaters</a>
-              </li>
-              <li>
-                <a href="products/">Hoodies</a>
-              </li>
+              <li><a href="products/">Blouses</a></li>
+              <li><a href="products/">Tees</a></li>
+              <li><a href="products/">Tanks</a></li>
+              <li><a href="products/">Sweaters</a></li>
+              <li><a href="products/">Hoodies</a></li>
             </ul>
           </li>
           <li>
@@ -135,21 +117,11 @@
               >Bottoms <i class="fa fa-angle-down" aria-hidden="true"></i>
             </a>
             <ul class="hidden">
-              <li>
-                <a href="products/">Jeans</a>
-              </li>
-              <li>
-                <a href="products/">Trousers</a>
-              </li>
-              <li>
-                <a href="products/">Skirts</a>
-              </li>
-              <li>
-                <a href="products/">Shorts</a>
-              </li>
-              <li>
-                <a href="products/">Leggings</a>
-              </li>
+              <li><a href="products/">Jeans</a></li>
+              <li><a href="products/">Trousers</a></li>
+              <li><a href="products/">Skirts</a></li>
+              <li><a href="products/">Shorts</a></li>
+              <li><a href="products/">Leggings</a></li>
             </ul>
           </li>
           <li>
@@ -157,21 +129,11 @@
               >Outerwear <i class="fa fa-angle-down" aria-hidden="true"></i>
             </a>
             <ul class="hidden">
-              <li>
-                <a href="products/">Jackets</a>
-              </li>
-              <li>
-                <a href="products/">Parkas</a>
-              </li>
-              <li>
-                <a href="products/">Trenches</a>
-              </li>
-              <li>
-                <a href="products/">Denim</a>
-              </li>
-              <li>
-                <a href="products/">Blazers</a>
-              </li>
+              <li><a href="products/">Jackets</a></li>
+              <li><a href="products/">Parkas</a></li>
+              <li><a href="products/">Trenches</a></li>
+              <li><a href="products/">Denim</a></li>
+              <li><a href="products/">Blazers</a></li>
             </ul>
           </li>
           <li>
@@ -179,24 +141,12 @@
               >Accessories <i class="fa fa-angle-down" aria-hidden="true"></i>
             </a>
             <ul class="hidden">
-              <li>
-                <a href="products/">Scarves</a>
-              </li>
-              <li>
-                <a href="products/">Sunglasses</a>
-              </li>
-              <li>
-                <a href="products/">Hats</a>
-              </li>
-              <li>
-                <a href="products/">Bags &amp; Wallets</a>
-              </li>
-              <li>
-                <a href="products/">Shoes</a>
-              </li>
-              <li>
-                <a href="products/">Belts</a>
-              </li>
+              <li><a href="products/">Scarves</a></li>
+              <li><a href="products/">Sunglasses</a></li>
+              <li><a href="products/">Hats</a></li>
+              <li><a href="products/">Bags &amp; Wallets</a></li>
+              <li><a href="products/">Shoes</a></li>
+              <li><a href="products/">Belts</a></li>
             </ul>
           </li>
           <li>
@@ -204,24 +154,12 @@
               >Sale <i class="fa fa-angle-down" aria-hidden="true"></i>
             </a>
             <ul class="hidden">
-              <li>
-                <a href="products/">Dresses</a>
-              </li>
-              <li>
-                <a href="products/">Tops</a>
-              </li>
-              <li>
-                <a href="products/">Bottoms</a>
-              </li>
-              <li>
-                <a href="products/">Outerwear</a>
-              </li>
-              <li>
-                <a href="products/">Accessories</a>
-              </li>
-              <li>
-                <a href="products/">Under $10</a>
-              </li>
+              <li><a href="products/">Dresses</a></li>
+              <li><a href="products/">Tops</a></li>
+              <li><a href="products/">Bottoms</a></li>
+              <li><a href="products/">Outerwear</a></li>
+              <li><a href="products/">Accessories</a></li>
+              <li><a href="products/">Under $10</a></li>
             </ul>
           </li>
 
@@ -230,11 +168,11 @@
             ><input type="text" value="Search"/><button>
               <i class="fa fa-search" aria-hidden="true"></i></button
           ></a>
-          <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-            <div/>
-            <div/>
-            <div/>
-          </a>
+          <a href="javascript:void(0);" class="icon" onclick="myFunction()"
+            ><div></div>
+            <div></div>
+            <div></div
+          ></a>
         </ul>
       </div>
     </div>
@@ -261,11 +199,7 @@
         <div class="row">
           <div class="card col-6 col-md-3 col-lg-3">
             <a href="item/" style="color:default;text-decoration:none;">
-              <img
-                class="card-img-top"
-                src="top_0000.jpg"
-                alt="Striped tee"
-              />
+              <img class="card-img-top" src="top_0000.jpg" alt="Striped tee" />
               <div class="card-block">
                 <h4 class="product-title">Striped tee</h4>
                 <p class="price">$9.99 <span class="old-price">$12.99</span></p>
@@ -358,11 +292,7 @@
 
           <div class="card col-6 col-md-3 col-lg-3">
             <a href="item/" style="color:default;text-decoration:none;">
-              <img
-                class="card-img-top"
-                src="top_0007.jpg"
-                alt="Chiffon tank"
-              />
+              <img class="card-img-top" src="top_0007.jpg" alt="Chiffon tank" />
               <div class="card-block">
                 <h4 class="product-title">Chiffon tank</h4>
                 <p class="price">$16.99</p>
@@ -443,34 +373,7 @@
       <div class="container">
         © 2017 for demonstration purposes only. Berkshire &amp; Nash is not a
         real retailer, and orders will not be fulfilled.
-
-        <script type="text/javascript" src="public_common.js"></script>
-
-        <script src="Foresee_Dec2016-main.js"></script>
-        <script src="ScrollMagic.js"></script>
-        <script src="debug.js"></script>
-        <script src="jquery.js"></script>
-        <script src="velocity.js"></script>
       </div>
     </div>
-
-    <script
-      src="jquery-3.js"
-      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="popper.js"
-      integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="bootstrap.js"
-      integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
-      crossorigin="anonymous"
-    ></script
-    ><script src="index.js"></script>
-
-    <!-- end coded_template: id:5379509346 path:Custom/page/demo_site_templates/retail_template.html -->
   </body>
 </html>
